--- a/frontend/src/styles/Footer/Footer.css
+++ b/frontend/src/styles/Footer/Footer.css
@@ -34,7 +34,18 @@ footer {
 .footer-bottom {
   display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; gap: 1rem;
 }
-.footer-copy { font-family: 'DM Mono', monospace; font-size: .6rem; letter-spacing: .1em; color: rgba(247,244,240,.25); }
+.footer-copy { font-family: 'DM Mono', monospace; font-size: .6rem; letter-spacing: .1em; color: rgba(247,244,240,.54); }
 .footer-social { display: flex; gap: 1.5rem; }
-.footer-social .link, .footer-social a { font-family: 'DM Mono', monospace; font-size: .6rem; letter-spacing: .1em; color: rgba(247,244,240,.25); text-decoration: none; transition: color .2s; }
+.footer-social .link, .footer-social a { font-family: 'DM Mono', monospace; font-size: .6rem; letter-spacing: .1em; color: rgba(247, 244, 240, 0.54); text-decoration: none; transition: color .2s; }
 .footer-social .link:hover, .footer-social a:hover { color: var(--paper); }
+
+
+@media(max-width:500px){
+  .footer-social{
+    display: flex;
+    justify-content: space-evenly;
+    flex: 1;
+    gap: 0;
+  }
+}
+  
